tests/break/break.exp
Error ---------------------------------------------------------------------------------------------------- break.js:6:24

Cannot assign `x` to `y` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:6:24
   6|         var y:number = x; // error: boolean !~> number
                             ^

References:
   break.js:2:23
   2|     var x = b ? null: false;
                            ^^^^^ [1]
   break.js:6:15
   6|         var y:number = x; // error: boolean !~> number
                    ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- break.js:8:20

Cannot assign `z` to `w` because possibly uninitialized variable [1] is incompatible with number [2].
[incompatible-type]

   break.js:8:20
   8|     var w:number = z; // 2 errors: ?string !~> number
                         ^

References:
   break.js:3:9
   3|     var z;
              ^ [1]
   break.js:8:11
   8|     var w:number = z; // 2 errors: ?string !~> number
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- break.js:8:20

Cannot assign `z` to `w` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:8:20
   8|     var w:number = z; // 2 errors: ?string !~> number
                         ^

References:
   break.js:5:30
   5|         if (x == null) { z = ""; break; }
                                   ^^ [1]
   break.js:8:11
   8|     var w:number = z; // 2 errors: ?string !~> number
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:16:24

Cannot assign `x` to `y` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:16:24
   16|         var y:number = x; // error: boolean !~> number
                              ^

References:
   break.js:12:23
   12|     var x = b ? null: false;
                             ^^^^^ [1]
   break.js:16:15
   16|         var y:number = x; // error: boolean !~> number
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:19:24

Cannot assign `x` to `z` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:19:24
   19|         var z:number = x; // 2 errors: (boolean | string) !~> number
                              ^

References:
   break.js:12:23
   12|     var x = b ? null: false;
                             ^^^^^ [1]
   break.js:19:15
   19|         var z:number = x; // 2 errors: (boolean | string) !~> number
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:19:24

Cannot assign `x` to `z` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:19:24
   19|         var z:number = x; // 2 errors: (boolean | string) !~> number
                              ^

References:
   break.js:17:13
   17|         x = "";
                   ^^ [1]
   break.js:19:15
   19|         var z:number = x; // 2 errors: (boolean | string) !~> number
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:23:20

Cannot assign `x` to `w` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:23:20
   23|     var w:number = x; // 2 errors: (boolean | string) !~> number
                          ^

References:
   break.js:12:23
   12|     var x = b ? null: false;
                             ^^^^^ [1]
   break.js:23:11
   23|     var w:number = x; // 2 errors: (boolean | string) !~> number
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:23:20

Cannot assign `x` to `w` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:23:20
   23|     var w:number = x; // 2 errors: (boolean | string) !~> number
                          ^

References:
   break.js:17:13
   17|         x = "";
                   ^^ [1]
   break.js:23:11
   23|     var w:number = x; // 2 errors: (boolean | string) !~> number
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:31:22

Cannot assign `x` to `y` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:31:22
   31|       let y:number = x; // error: boolean !~> number
                            ^

References:
   break.js:27:23
   27|     var x = b ? null: false;
                             ^^^^^ [1]
   break.js:31:13
   31|       let y:number = x; // error: boolean !~> number
                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:35:22

Cannot assign `x` to `z` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:35:22
   35|       let z:number = x; // 2 errors: (boolean | string) !~> number
                            ^

References:
   break.js:27:23
   27|     var x = b ? null: false;
                             ^^^^^ [1]
   break.js:35:13
   35|       let z:number = x; // 2 errors: (boolean | string) !~> number
                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:35:22

Cannot assign `x` to `z` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:35:22
   35|       let z:number = x; // 2 errors: (boolean | string) !~> number
                            ^

References:
   break.js:32:11
   32|       x = "";
                 ^^ [1]
   break.js:35:13
   35|       let z:number = x; // 2 errors: (boolean | string) !~> number
                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:40:20

Cannot assign `x` to `w` because boolean [1] is incompatible with number [2]. [incompatible-type]

   break.js:40:20
   40|     var w:number = x; // 2 errors: (boolean | string) !~> number
                          ^

References:
   break.js:27:23
   27|     var x = b ? null: false;
                             ^^^^^ [1]
   break.js:40:11
   40|     var w:number = x; // 2 errors: (boolean | string) !~> number
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:40:20

Cannot assign `x` to `w` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:40:20
   40|     var w:number = x; // 2 errors: (boolean | string) !~> number
                          ^

References:
   break.js:32:11
   32|       x = "";
                 ^^ [1]
   break.js:40:11
   40|     var w:number = x; // 2 errors: (boolean | string) !~> number
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:46:24

Cannot assign `z` to `y` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:46:24
   46|         var y:number = z;
                              ^

References:
   break.js:47:22
   47|         if (b) { z = ""; continue; } // error: string !~> number
                            ^^ [1]
   break.js:46:15
   46|         var y:number = z;
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- break.js:50:20

Cannot assign `z` to `w` because string [1] is incompatible with number [2]. [incompatible-type]

   break.js:50:20
   50|     var w:number = z; // error: string !~> number
                          ^

References:
   break.js:47:22
   47|         if (b) { z = ""; continue; } // error: string !~> number
                            ^^ [1]
   break.js:50:11
   50|     var w:number = z; // error: string !~> number
                 ^^^^^^ [2]



Found 15 errors
